# oamc

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
apdl/: export_nodes_elements_stresses.txt
docs/: api.rst  conf.py  guide.rst  index.rst  unrelated.rst
docs/_templates/autosummary/: module.rst
examples/: .gitignore  README.md
examples/001/: elements.txt  main.py  nodes.txt  stresses.txt  types.txt
examples/1/: main.py  seeds.txt
examples/2/: main.py
examples/3/: main.py
examples/4/: main.py
examples/template/: main.py
src/oamc/: __init__.py  banner.py  constants.py  enums.py  fiber.py  logging.py  math_utils.py  mechanics_utils.py  vtk_utils.py
src/oamc/core/: __init__.py  composite_material.py  composite_model.py
src/oamc/fea/: __init__.py  analysis.py  bc.py  material.py  mesh.py  readers.py  utils.py
src/oamc/fem/: __init__.py  analysis.py  ansys_element_type.py  bc.py  element_formulation.py  element_types.py  fem_utils.py  functions.py  material.py  mesh.py  model.py  readers.py  utils.py
src/oamc/integrations/: __init__.py
src/oamc/integrations/ansys/: __init__.py  parser.py  session.py
src/oamc/io/: functions.py
src/oamc/lpp/: __init__.py  functions.py  lpp.py  lpp_utils.py  path.py  rk_method.py
src/oamc/mechanics/: __init__.py  axis.py  functions.py
src/oamc/optimization/: __init__.py  function_cache.py  optimization_problem.py  optimization_result.py  optimizer.py
src/oamc/post/: __init__.py  viewer.py
src/oamc/utils/: __init__.py  math.py  mechanics.py  optimization.py  polylines.py  vtk.py
src/oamc/x/: __init__.py  composite_analysis.py  composite_material.py  composite_model.py  utils.py  x_analysis.py  x_material.py
tests/: smoke_test.py
tests/test_fea/: test_analysis.py
tests/test_fem/: test_analysis.py  test_model.py
tests/test_optimization/: test_optimizer.py
